# async-server

./: .env.local  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/: clients.py  execute_task.py  index_project.py  research_task.py  revise_task.py  server.py
src/agent/: __init__.py  agent_metadata.py  analyzer_agent_metadata.py  chat_agent_metadata.py  claude_code_agent.py  output_formatter.py  research_agent_metadata.py  summary_agent_metadata.py
src/api/auth/: __init__.py  auth_github_api.py  invite_people_api.py  redeem_email_code_api.py  redeem_invite_code_api.py  verify_email_api.py
src/api/github/: __init__.py  (+1 more)
src/async_module/: __init__.py  async_client.py  async_constants.py
src/email/: __init__.py  email_client.py
src/firebase/: __init__.py  firestore_client.py  storage_client.py
src/github/: __init__.py  github_client.py  github_constants.py  handle_issues.py  handle_pull_request.py  handle_push.py
src/google/: __init__.py  gcp_constants.py  gcr_client.py  secret_client.py  storage_client.py
src/model/: __init__.py
src/notification/: notification_utils.py
src/payment/: __init__.py  payment_constants.py  payment_utils.py  stripe_client.py
src/prompt/: analyze_project_prompt.py  chat_prompt.py  execute_task_prompt.py  generate_subtasks_prompt.py  research_task_prompt.py  revise_task_prompt.py  summarize_chat_prompt.py
src/tools/: async_tool.py
src/utils/: bootstrap_utils.py  chat_utils.py  diff_utils.py  filesystem_utils.py  git_utils.py  message_utils.py  setup_utils.py  task_utils.py
(+77 files in other folders)
